--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,24 +2,39 @@
 <app-breadcrumb [path]="path" (parentPath)="alterPath($event)"></app-breadcrumb>
 
 <!-- Button trigger modal -->
-<div class="container" style="margin:15px 0px">
+<!-- <div class="container" style="margin:15px 0px">
 	<div class="row">
 		<div class="col-12" style="text-align: center;">
-			<button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal" (click)="setModalTitle('File')" style="width: 30%;
+			<button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal"
+				(click)="setModalTitle('File')" style="width: 30%;
 			margin-right: 30px;">
-  Create File 
-</button>
-<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#exampleModal" (click)="setModalTitle('Folder')" style="width: 32%;margin-left: 30px;">
-	Create Folder
-  </button>
+				Create File
+			</button>
+			<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#exampleModal"
+				(click)="setModalTitle('Folder')" style="width: 32%;margin-left: 30px;">
+				Create Folder
+			</button>
 		</div>
-		
+
 
 
 	</div>
+</div> -->
+<div  style="display: flex;margin-left: 23%;margin-bottom: 15px;">
+	<button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal"
+		(click)="setModalTitle('File')" style="width: 30%;">
+		Create File
+	</button>
+	<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#exampleModal"
+		(click)="setModalTitle('Folder')" style="width: 30%;margin-left: 30px;">
+		Create Folder
+	</button>
 </div>
 
-<app-card [data]="contentOnScreen" (folderClick)="displayCurrentDirectory($event)" (deleteClick)="deleteFileFolder($event)" (editClick)="handleEdit($event)" style="text-align: -webkit-center;"></app-card>
+
+<app-card [data]="contentOnScreen" (folderClick)="displayCurrentDirectory($event)"
+	(deleteClick)="deleteFileFolder($event)" (editClick)="handleEdit($event)" style="text-align: -webkit-center;">
+</app-card>
 
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -28,23 +43,26 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="exampleModalLabel">Create {{modalTitle}}</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModal()" >
-          <span aria-hidden="true">&times;</span>
-        </button>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModal()">
+					<span aria-hidden="true">&times;</span>
+				</button>
 			</div>
 			<div class="modal-body">
 				<form novalidate>
 					<div class="form-group">
-            <input type="text" class="form-control" [(ngModel)]="name"  name="name">
-       
-          </div>
+						<input type="text" class="form-control" [(ngModel)]="name" name="name">
+
+					</div>
 
 				</form>
 			</div>
 			<div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal" (click)='onSubmit()' *ngIf="!editName">Save</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal" (click)='onEdit()' *ngIf="editName">Confirm</button>
-				<button type="button" class="btn btn-secondary" data-dismiss="modal" (click)='closeModal()'>Close</button>
+				<button type="button" class="btn btn-primary" data-dismiss="modal" (click)='onSubmit()'
+					*ngIf="!editName">Save</button>
+				<button type="button" class="btn btn-primary" data-dismiss="modal" (click)='onEdit()'
+					*ngIf="editName">Confirm</button>
+				<button type="button" class="btn btn-danger" data-dismiss="modal"
+					(click)='closeModal()'>Close</button>
 			</div>
 		</div>
 	</div>
